# trt-engine

./: .gitignore  CMakeLists.txt  README.md  benchmark_multi_threads.cpp  benchmark_performance.cpp  c_api_test.cpp  function_test_pipeline.cpp  functional_test_pipeline.cpp  functional_test_v2_cascade.cpp  functional_test_yolopose.cpp  jetson_test.cpp  pyengine_config.json  pyproject.toml  requirements.txt  test_batch_processing.cpp  test_python_batch_processing.py  trt_engine_performance_test.cpp  trt_engine_pipeline_test.cpp  trt_engine_test.cpp  trt_engine_test.phase2.txt  wrapper_yolo_test.py
config/: efficientnet_feats.json  efficientnet_feats_v2.json  global.json  schema.json  yolov8n.json  yolov8n_pose.json  yolov8s.json  yolov8s_pose.json
configs/: efficientnet_feats_v2.json  yolov8n.json
displayer/: .gitignore  app.py  config.yaml  config_model01.yaml  config_model02.yaml  environment.yaml  requirements.txt
displayer/common/image/: DisplayHandler.py  adjust.py
displayer/configs/: app.yaml
displayer/protobufs/: inference_result.pb.cc  inference_result.pb.h  inference_result_pb2.py  video_frame.pb.cc  video_frame.pb.h  video_frame_pb2.py
displayer/scripts/: upload_img_to_cloud.sh
examples/: efficientnet_pipeline_example.c  nms_example.c  yolopose_pipeline_example.c
examples_v2_python/: README.md  cascade_example.py  efficientnet_standalone_example.py  yolopose_standalone_example.py
include/adjust/: image_adjust.hpp
include/args/: parse_args.hpp
include/c_apis/: c_inference.h  c_vit_infer.h  c_yolo_infer.h
include/models/: infer_google_vit.h  infer_model_base.h  infer_yolov8_obj.h  infer_yolov8_pose.h
include/nlohmann/: json.hpp
include/serverlet/: c_efficient_net_apis.h
include/text/: text_painter.h
include/utils/: load_labels.h
include/yolo/: nms.hpp  yolo_def.h  yolo_visualization.h
jetson/: .gitignore  demo_4channels.cpp  demo_autoscaling.cpp  demo_depth_anything_v2.cpp  demo_human_action_vit.cpp  demo_yolopose.cpp  jetson_adapter.cpp  jetson_infer.cpp  jetson_infer_obj.cpp  jetson_inference.cpp
jetson/cmakes/: make.jetson_adapter.txt  make.jetson_infer.txt  make.lib.txt
jetson/common/: cuda_error_check.h
jetson/configs/: detect_objects.yaml  estimate_pose.yaml
jetson/extend/: .gitignore
jetson/obs/: demo_4channels.cpp  demo_yolopose.cpp
jetson/res/: app.config.yaml
jetson/scripts/: clean.sh  compile.sh  converter.sh  get_onnx_info.py  jetson_obj.cpp  multi_run.py  package.sh  uninstall.sh
jetson_infer/: .gitignore  CMakeLists.txt  config.yaml  local.cpp  main.cpp  original_main.txt
jetson_infer/common/: MQTTClient.cpp  MQTTClient.h  engine_loader.cpp  engine_loader.h  framework.cpp  tensor.hpp  yam_config.cpp  yaml_config.h
jetson_infer/common/YAML/: config.h
jetson_infer/common/engine/: engine_loader.h  inference.h
jetson_infer/common/infer/: yolov8.cpp  yolov8.h
jetson_infer/common/protobufs/: inference_result.pb.cc  inference_result.pb.h  video_frame.pb.cc  video_frame.pb.h
jetson_infer/common/utils/: Timer.h
jetson_infer/configs/: config_infer02.yaml
jetson_infer/include/: .gitignore
jetson_infer/include/common/: FPSCounter.h  framework.h  yaml_config.h
jetson_infer/include/yolo/: JetsonInference.h
jetson_infer/scripts/: check_usage.sh  clean_caches.sh  clean_project.sh  compile_project.sh  convert_onnx.sh  get_onnx_info.py  multi_run.py  setup_environment.sh  setup_tensorrt.sh
jetson_infer/yolo/: JetsonInference.cpp  JetsonInference.h  yolov8_str.cpp  yolov8_str.h  yolov8_utils.cpp  yolov8_utils.h
obsoleted/displayer/: config_model01.yaml  config_model02.yaml
obsoleted/video_adp/: .gitignore
protobufs/: .gitignore  compile.sh  compile_protobufs.sh  inference_result.proto  raw_frames.proto  video_frame.proto
pyengine/: __init__.py
pyengine/config/: camera_setting_parser.py  pipeline_config_parser.py
pyengine/font/: common.py  text_painter.py  utils.py
pyengine/inference/: basic_engine_wrapper.py  basic_onnx_wrapper.py  efficientnet_engine_wrapper.py  efficientnet_onnx_wrapper.py  yolo_engine_wrapper.py  yolo_onnx_wrapper.py
pyengine/math/: statistics_cache.py
pyengine/network/: mqtt_client.py
pyengine/res/: schema.json
pyengine/streamer/: stream_reader.py
pyengine/tracker/: SORT.py  tracker_manager.py
pyengine/trigger/: event.py  periodic.py
pyengine/utils/: common.ipynb  common.py  coords_transform.py  fps_counter.py  image_segmentation.py  logger.py  power_controller.py  scale_utils.py
pyengine/visualization/: color_utils.py  image_adjuster.py  inference_drawer.py  polygon_drawer.py  schema_loader.py  scheme_loader.py  vision_drawer.py
scripts/: build_engine.py  build_engine.sh  check_onnx.py  compile_protobufs.sh  configure_accel_env.sh  converter.sh  install_envs.sh  install_envs_arms.sh  install_package.sh  install_pw_monitor.py  install_pw_monitor.sh  install_pyengine.sh  jetson_boost.py  jetson_boost.sh  jetson_power_clocks.sh  ldconfig_inject.sh  pack.sh  set_clocks.sh  setup_arm_envs.sh  setup_cuda_env.sh  setup_tensorrt_env.sh  setup_x86_envs.sh  sync_remote.py  sync_remote.sh  sync_remote_config.json  trtenv.py  trtenv.sh
src/: c_efficient_net_apis.cpp
src/c_apis/: aux_batch_process.cpp  c_common.cpp  c_pose_detection.cpp  c_pose_pipeline.cpp  c_yolopose_detection.cpp  jetson_apis.cpp
src/models/: c_yolo_apis.cpp  cuda_tensor_processor.cpp  infer_efficient_net.cpp  infer_google_vit.cpp  infer_model.cpp  infer_model_base.cpp  infer_model_multi.cpp  infer_yolo_obj.cpp  infer_yolo_pose.cpp  infer_yolo_v8_detection.cpp  infer_yolov8_obj.cpp  infer_yolov8_pose.cpp  trt_engine.cpp
src/stream/: stream_reader.cpp
src/text/: text_painter.cpp
src/trt_engine/: trt_engine.cpp  trt_engine_multi.cpp
src/utils/: load_labels.cpp  logger.cpp  system.cpp
video_adp/: .gitignore  CMakeLists.txt  config.yaml  main.cpp
video_adp/common/: CameraStreamer.h  ImageAdjust.h  MQTTClient.cpp  yaml_config.cpp  yaml_config.h
video_adp/configs/: config_family01.yaml  config_vehicle02.yaml  config_vehicle04.yaml
video_adp/scripts/: compile_project.sh
(+246 files in other folders)
